feedback on our plans.

* GtkTreeView, GtkIconView, GtkComboBox and
  auxiliary classes have been deprecated

* GtkEntryCompletion has been deprecated

* GtkStyleContext has been deprecated

* gtk_render_ and gtk_snapshot_render_ APIs
  have been deprecated

* GtkAppChooser widgets have been deprecated

* GtkMessageDialog has been deprecated and
  replaced by a new async dialog API

* GtkColorChooser, GtkFontChooser, GtkFileChooser
  interfaces and their implementations have been
  deprecated. A new family of async dialog APIs
  has been introduced to replace them

* GtkColorDialog, GtkFontDialog, GtkFileDialog
  and GtkAlertDialog are new dialog classes with
  a consistent and well-bindable API

* GtkMountOperation:
 - Fix the dialog to look reasonable
 - Make it work under non-X11

* GtkStringSorter:
 - Support different collation methods

* Accessibility:
 - Introduce GtkAccessibleRange and implement it

* Debugging:
 - Unify formatting for debug output
 - Make make debug options available in
   non-debug builds

* Translation updates:
 Abkhazian
 Basque
 Bulgarian
 Croatian
 Friulian
 Georgian
 German
 Hungarian
 Russian
 Turkish


Overview of Changes in 4.8.1, 16-09-2022
========================================

* Input:
 - Fix problems with input method interactions that caused
   dead keys not to work
 - Accept single-key compose sequences (these are used with
   some keyboard layouts)

* GtkColumnView:
 - Flip column order in right-to-left context

* GtkGridView:
 - Fix problems with rubberbanding

* GtkFileChooser:
 - Fix positioning of popovers in the places view
 - Make ~ and . keyboard shortcuts work again

* gsk:
 - Make glyph upload more similar to icons

* Make file transfer via portals work, this fixes file
  copy/paste and dnd in flatpaks

* Translation updates:
 Catalan
 Chinese (China)
 Chinese (Taiwan)
 Latvian


Overview of Changes in 4.8.0, 06-09-2022
========================================

* GtkTreeView: