@@ -22,7 +22,7 @@
 #error "Only <gtk/gtk.h> can be included directly."
 #endif
 
-#include <gtk/gtkdialog.h>
+#include <gtk/deprecated/gtkdialog.h>
 
 G_BEGIN_DECLS
 
