@@ -23,6 +23,7 @@ gtk_deprecated_sources = [
   'deprecated/gtkcolorchooser.c',
   'deprecated/gtkcombobox.c',
   'deprecated/gtkcomboboxtext.c',
+  'deprecated/gtkdialog.c',
   'deprecated/gtkentrycompletion.c',
   'deprecated/gtkfilechooser.c',
   'deprecated/gtkfontbutton.c',
@@ -71,6 +72,7 @@ gtk_deprecated_headers = [
   'deprecated/gtkcolorchooserwidget.h',
   'deprecated/gtkcombobox.h',
   'deprecated/gtkcomboboxtext.h',
+  'deprecated/gtkdialog.h',
   'deprecated/gtkentrycompletion.h',
   'deprecated/gtkfilechooser.h',
   'deprecated/gtkfilechooserdialog.h',
