@@ -97,7 +97,7 @@
 #include <gtk/gtkcustomlayout.h>
 #include <gtk/gtkcustomsorter.h>
 #include <gtk/gtkdebug.h>
-#include <gtk/gtkdialog.h>
+#include <gtk/deprecated/gtkdialog.h>
 #include <gtk/gtkdialogerror.h>
 #include <gtk/gtkdirectorylist.h>
 #include <gtk/gtkdragicon.h>
