@@ -199,7 +199,6 @@ gtk_public_sources = files([
   'gtkcustomfilter.c',
   'gtkcustomlayout.c',
   'gtkcustomsorter.c',
-  'gtkdialog.c',
   'gtkdialogerror.c',
   'gtkdirectorylist.c',
   'gtkdragicon.c',
@@ -455,7 +454,6 @@ gtk_public_headers = files([
   'gtkcustomlayout.h',
   'gtkcustomsorter.h',
   'gtkdebug.h',
-  'gtkdialog.h',
   'gtkdialogerror.h',
   'gtkdirectorylist.h',
   'gtkdragicon.h',
